--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - sudo service mysql restart
 
   - bin/rails db:create db:migrate
-  - bundle exec rake spec
+  - bundle exec rspec
 matrix:
   allow_failures:
     - rvm: ruby-head
