Allow configuring hako_dir in barbeque.yml

--- a/spec/dummy/config/barbeque.hako.yml
+++ b/spec/dummy/config/barbeque.hako.yml
@@ -1,6 +1,7 @@
 default: &default
   runner: Hako
   runner_options:
+    hako_dir: /home/k0kubun/hako_repo
     hako_env:
       ACCESS_TOKEN: token
 
