--- a/spec/dummy/config/barbeque.hako.yml
+++ b/spec/dummy/config/barbeque.hako.yml
@@ -1,6 +1,6 @@
 default: &default
-  runner: Hako
-  runner_options:
+  executor: Hako
+  executor_options:
     hako_dir: /home/k0kubun/hako_repo
     hako_env:
       ACCESS_TOKEN: token
