Rename SNSSubscription to SnsSubscription for Zeitwerk

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,5 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - run: bin/rails db:setup
+      - run: bin/rails zeitwerk:check
       - run: bundle exec rspec
