--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,16 @@ jobs:
       fail-fast: false
       matrix:
         ruby:
-          - '2.6'
-          - '2.7'
           - '3.0'
+          - '3.1'
+          - '3.2'
+        mysql:
+          - '5.7'
+          - '8.0'
     name: Run test with Ruby ${{ matrix.ruby }}
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:${{ matrix.mysql }}
         env:
           MYSQL_ROOT_PASSWORD: barbeque_root
           MYSQL_USER: barbeque
@@ -34,7 +37,7 @@ jobs:
       RAILS_ENV: test
       DATABASE_URL: mysql2://barbeque:barbeque@127.0.0.1:3306/barbeque
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
