--- a/spec/dummy/config/barbeque.hako.yml
+++ b/spec/dummy/config/barbeque.hako.yml
@@ -4,7 +4,7 @@ default: &default
     hako_dir: /home/k0kubun/hako_repo
     hako_env:
       ACCESS_TOKEN: token
-    yaml_dir: /yamls
+    definition_dir: /yamls
     oneshot_notification_prefix: s3://barbeque/task_statuses?region=ap-northeast-1
 
 development:
